Fix doorbell on mobile

--- a/doorbell/src/Doorbell.css
+++ b/doorbell/src/Doorbell.css
@@ -1,3 +1,6 @@
 .doorbell {
+    width: 300px;
     height: 500px;
+    background-image: url("/doorbell.png");
+    background-size: cover;
 }
